# teleon

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  SKILL.md  ai.py  claude.py  cli.py  config.py  enricher.py  fix_followups.py  nlp.py  notion.py  pyproject.toml  search_intel.py  seed_followups.py  setup_notion.py  sync.py  telegram.py  teleon.py  tracker.py
.claude/agents/: crm-notion-manager.md
.claude/commands/: crm.md
