[project]
name = "teleon"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36",
    "notion-client>=2.2",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "click>=8.1",
    "spacy>=3.7",
    "vaderSentiment>=3.3",
    "dateparser>=1.2",
    "rapidfuzz>=3.6",
    "ddgs>=0.1",
    "langdetect>=1.0",
]

[project.scripts]
teleon = "teleon:cli"
